--- a/pom.xml
+++ b/pom.xml
@@ -80,20 +80,20 @@
     <profiles>
         <!--开发默认环境-->
         <profile>
-            <id>mysql</id>
+            <id>dev</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <profileActive>mysql</profileActive>
+                <profileActive>dev</profileActive>
             </properties>
         </profile>
 
         <!--测试环境-->
         <profile>
-            <id>h2</id>
+            <id>test</id>
             <properties>
-                <profileActive>h2</profileActive>
+                <profileActive>test</profileActive>
             </properties>
         </profile>
 
